[gd_scene load_steps=3 format=3 uid="uid://b3gqqjhsbh8cq"]

[ext_resource type="Theme" uid="uid://bbuhj2nojku5d" path="res://addons/DVs_behavior_tree/debug/debugger_ui_theme.tres" id="1_fc1cr"]
[ext_resource type="Script" path="res://addons/DVs_behavior_tree/debug/debugger_ui.gd" id="2_2bslt"]

[node name="DebuggerUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fc1cr")
script = ExtResource("2_2bslt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TreesMenu" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TreesMenu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TreesMenu/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphContainer" type="Control" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NoActiveTree" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "No active behavior tree."
horizontal_alignment = 1

[node name="OptionsPanel" type="MarginContainer" parent="HBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/OptionsPanel"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CenterView" type="Button" parent="HBoxContainer/Panel/OptionsPanel/HBoxContainer"]
layout_mode = 2
text = "(Center view)"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/Panel/OptionsPanel/HBoxContainer"]
layout_mode = 2

[connection signal="gui_input" from="HBoxContainer/Panel" to="." method="_on_graph_panel_gui_input"]
[connection signal="pressed" from="HBoxContainer/Panel/OptionsPanel/HBoxContainer/CenterView" to="." method="_on_center_view_pressed"]
